<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FA3D3E40"
    tools:context=".MainActivity2">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAndroidDev"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="100dp"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/blueForD"
            android:text="@string/android_app_development"
            android:textAlignment="center" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardWebDev"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="100dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/greenForD"
            android:text="@string/web_development" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardIosDev"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/cardBlcokchain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardAndroidDev">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:text="@string/ios_app_development"
            android:textAlignment="center"
            android:textColor="@color/light_yellowgreen"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAiMl"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginRight="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/cardDevops"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardWebDev"
        app:layout_constraintVertical_bias="0.497">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:text="@string/ai_ml"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBlcokchain"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="108dp"
        android:layout_marginLeft="30dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="100dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/greenForD"
            android:text="@string/blockchain" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDevops"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="108dp"
        android:layout_marginRight="30dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="100dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/blueForD"
            android:text="@string/devops" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCallUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/blueForD"
        android:text="@string/call_us"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>